fix: UILD-291: Edit form: form is distorted when some preview field value contains many characters

--- a/src/components/EditPreview/EditPreview.scss
+++ b/src/components/EditPreview/EditPreview.scss
@@ -1,5 +1,6 @@
 .preview-container {
   min-width: 475px;
+  max-width: 475px;
   border-right: 1px solid #00000019;
 
   .preview-container-header {
